# mate-eiciel

./: AUTHORS  ChangeLog  Makefile.in  README  README.md  TODO  autogen.sh  config.hpp.in  configure.ac  missing
doc/C/: Makefile.am  concepts.page  default.page  index.page  mask.page  open.page  requirements.page  view.page  xattr.page
doc/C/figures/: Makefile.am
img/: Makefile.am
man/: Makefile.am  mate-eiciel.1
po/: POTFILES.in  ar.po  ca.po  cs.po  de.po  eiciel.pot  en_GB.po  en_US.po  es.po  fr.po  hu.po  it.po  ja.po  ko.po  nl.po  pl.po  pt_BR.po  ru.po  sv.po  zh_CN.po  zh_TW.po
src/: Makefile.am  eiciel_caja_page.cpp  eiciel_caja_page.hpp  eiciel_container.cpp  eiciel_standalone.cpp  mate-eiciel.appdata.xml  mate-eiciel.desktop.in  org.mate-desktop.mate-eiciel.appdata.xml  org.mate-desktop.mate-eiciel.desktop.in
