SUBDIRS=figures

mateeicieldocdir = $(datadir)/help/C/mate-eiciel

dist_mateeicieldoc_DATA = \
      add.page \
      concepts.page \
      default.page \
      edit.page \
      index.page \
      mask.page \
      open.page \
      remove.page \
      requirements.page \
      view.page \
      xattr.page \
      $(END)
